--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -18,31 +18,31 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="permlab_bluetoothShareManager" msgid="311492132450338925">"使用下载管理器。"</string>
     <string name="permdesc_bluetoothShareManager" msgid="8930572979123190223">"允许应用访问蓝牙共享 (BluetoothShare) 管理器并将其用于传输文件。"</string>
-    <string name="permlab_bluetoothWhitelist" msgid="7091552898592306386">"将蓝牙设备列入访问权限白名单。"</string>
+    <string name="permlab_bluetoothWhitelist" msgid="7091552898592306386">"将这个蓝牙设备列入访问权限白名单。"</string>
     <string name="permdesc_bluetoothWhitelist" msgid="5494513855192170109">"允许该应用暂时将某个蓝牙设备列入白名单，从而允许该设备在不经过用户确认的情况下，将文件发送到本设备。"</string>
     <string name="bt_share_picker_label" msgid="6268100924487046932">"蓝牙"</string>
     <string name="unknown_device" msgid="9221903979877041009">"未知设备"</string>
     <string name="unknownNumber" msgid="4994750948072751566">"未知号码"</string>
     <string name="airplane_error_title" msgid="2683839635115739939">"飞行模式"</string>
-    <string name="airplane_error_msg" msgid="8698965595254137230">"飞行模式中不能使用蓝牙。"</string>
+    <string name="airplane_error_msg" msgid="8698965595254137230">"请注意！飞行模式中你不能使用蓝牙！"</string>
     <string name="bt_enable_title" msgid="8657832550503456572"></string>
-    <string name="bt_enable_line1" msgid="7203551583048149">"要使用蓝牙服务，您需要先开启蓝牙。"</string>
-    <string name="bt_enable_line2" msgid="4341936569415937994">"要现在开启蓝牙吗？"</string>
+    <string name="bt_enable_line1" msgid="7203551583048149">"如果想要使用蓝牙服务，你需要先开启蓝牙哦~"</string>
+    <string name="bt_enable_line2" msgid="4341936569415937994">"你现在想要开启蓝牙吗？"</string>
     <string name="bt_enable_cancel" msgid="1988832367505151727">"取消"</string>
     <string name="bt_enable_ok" msgid="3432462749994538265">"开启"</string>
     <string name="incoming_file_confirm_title" msgid="8139874248612182627">"文件传输"</string>
-    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"要接受传入的文件吗？"</string>
+    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"你想要接受传入的文件吗？"</string>
     <string name="incoming_file_confirm_cancel" msgid="2973321832477704805">"拒绝"</string>
     <string name="incoming_file_confirm_ok" msgid="281462442932231475">"接受"</string>
     <string name="incoming_file_confirm_timeout_ok" msgid="1414676773249857278">"确定"</string>
-    <string name="incoming_file_confirm_timeout_content" msgid="172779756093975981">"接受来自“<xliff:g id="SENDER">%1$s</xliff:g>”的文件时发生超时"</string>
-    <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"有人发送文件给您"</string>
+    <string name="incoming_file_confirm_timeout_content" msgid="172779756093975981">"接收来自“<xliff:g id="SENDER">%1$s</xliff:g>”的文件时发生了超时错误"</string>
+    <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"嘿！有人正在给你发送文件！"</string>
     <string name="incoming_file_confirm_Notification_content" msgid="3359694069319644738">"<xliff:g id="SENDER">%1$s</xliff:g>已准备好发送<xliff:g id="FILE">%2$s</xliff:g>"</string>
     <string name="notification_receiving" msgid="4674648179652543984">"蓝牙共享：正在接收“<xliff:g id="FILE">%1$s</xliff:g>”"</string>
-    <string name="notification_received" msgid="3324588019186687985">"蓝牙共享：已接收“<xliff:g id="FILE">%1$s</xliff:g>”"</string>
+    <string name="notification_received" msgid="3324588019186687985">"蓝牙共享：接收“<xliff:g id="FILE">%1$s</xliff:g>”成功"</string>
     <string name="notification_received_fail" msgid="3619350997285714746">"蓝牙共享：未收到文件“<xliff:g id="FILE">%1$s</xliff:g>”"</string>
     <string name="notification_sending" msgid="3035748958534983833">"蓝牙共享：正在发送“<xliff:g id="FILE">%1$s</xliff:g>”"</string>
-    <string name="notification_sent" msgid="9218710861333027778">"蓝牙共享：已发送“<xliff:g id="FILE">%1$s</xliff:g>”"</string>
+    <string name="notification_sent" msgid="9218710861333027778">"蓝牙共享：发送“<xliff:g id="FILE">%1$s</xliff:g>”成功"</string>
     <string name="notification_sent_complete" msgid="302943281067557969">"已完成100%"</string>
     <string name="notification_sent_fail" msgid="6696082233774569445">"蓝牙共享：未发送文件“<xliff:g id="FILE">%1$s</xliff:g>”"</string>
     <string name="download_title" msgid="3353228219772092586">"文件传输"</string>
@@ -50,7 +50,7 @@
     <string name="download_line2" msgid="5876973543019417712">"文件：<xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="download_line3" msgid="4384821622908676061">"文件大小：<xliff:g id="SIZE">%1$s</xliff:g>"</string>
     <string name="download_line4" msgid="8535996869722666525"></string>
-    <string name="download_line5" msgid="3069560415845295386">"正在接收文件..."</string>
+    <string name="download_line5" msgid="3069560415845295386">"接收文件中..."</string>
     <string name="download_cancel" msgid="9177305996747500768">"停止"</string>
     <string name="download_ok" msgid="5000360731674466039">"隐藏"</string>
     <string name="incoming_line1" msgid="2127419875681087545">"来自"</string>
@@ -64,7 +64,7 @@
     <string name="download_succ_ok" msgid="7053688246357050216">"打开"</string>
     <string name="upload_line1" msgid="2055952074059709052">"发给：“<xliff:g id="RECIPIENT">%1$s</xliff:g>”"</string>
     <string name="upload_line3" msgid="4920689672457037437">"文件类型：<xliff:g id="TYPE">%1$s</xliff:g> (<xliff:g id="SIZE">%2$s</xliff:g>)"</string>
-    <string name="upload_line5" msgid="7759322537674229752">"正在发送文件..."</string>
+    <string name="upload_line5" msgid="7759322537674229752">"发送文件中..."</string>
     <string name="upload_succ_line5" msgid="5687317197463383601">"已发送文件"</string>
     <string name="upload_succ_ok" msgid="7705428476405478828">"确定"</string>
     <string name="upload_fail_line1" msgid="7899394672421491701">"文件未发送至“<xliff:g id="RECIPIENT">%1$s</xliff:g>”。"</string>
@@ -76,18 +76,18 @@
     <string name="unknown_file_desc" msgid="480434281415453287">"没有可处理此类文件的应用。\n"</string>
     <string name="not_exist_file" msgid="3489434189599716133">"没有文件"</string>
     <string name="not_exist_file_desc" msgid="4059531573790529229">"该文件不存在。\n"</string>
-    <string name="enabling_progress_title" msgid="436157952334723406">"请稍候..."</string>
-    <string name="enabling_progress_content" msgid="4601542238119927904">"正在打开蓝牙..."</string>
-    <string name="bt_toast_1" msgid="972182708034353383">"系统将会接收该文件。请在通知面板中检查进度。"</string>
+    <string name="enabling_progress_title" msgid="436157952334723406">"Now Loading..."</string>
+    <string name="enabling_progress_content" msgid="4601542238119927904">"打开蓝牙中..."</string>
+    <string name="bt_toast_1" msgid="972182708034353383">"我们将会接收该文件。可以在通知面板中查看接收进度哦！"</string>
     <string name="bt_toast_2" msgid="8602553334099066582">"无法接收该文件。"</string>
     <string name="bt_toast_3" msgid="6707884165086862518">"已停止接收来自“<xliff:g id="SENDER">%1$s</xliff:g>”的文件"</string>
     <string name="bt_toast_4" msgid="4678812947604395649">"正在向“<xliff:g id="RECIPIENT">%1$s</xliff:g>”发送文件"</string>
     <string name="bt_toast_5" msgid="2846870992823019494">"正在向“<xliff:g id="RECIPIENT">%2$s</xliff:g>”发送<xliff:g id="NUMBER">%1$s</xliff:g>个文件"</string>
     <string name="bt_toast_6" msgid="1855266596936622458">"已停止向“<xliff:g id="RECIPIENT">%1$s</xliff:g>”发送文件"</string>
-    <string name="bt_sm_2_1" product="nosdcard" msgid="352165168004521000">"USB存储设备空间不足，无法保存来自“<xliff:g id="SENDER">%1$s</xliff:g>”的文件"</string>
-    <string name="bt_sm_2_1" product="default" msgid="1989018443456803630">"SD卡存储空间不足，无法保存来自“<xliff:g id="SENDER">%1$s</xliff:g>”的文件"</string>
+    <string name="bt_sm_2_1" product="nosdcard" msgid="352165168004521000">"USB存储设备空间即将爆满，无法保存来自“<xliff:g id="SENDER">%1$s</xliff:g>”的文件"</string>
+    <string name="bt_sm_2_1" product="default" msgid="1989018443456803630">"SD卡存储空间即将爆满，无法保存来自“<xliff:g id="SENDER">%1$s</xliff:g>”的文件"</string>
     <string name="bt_sm_2_2" msgid="2965243265852680543">"所需空间：<xliff:g id="SIZE">%1$s</xliff:g>"</string>
-    <string name="ErrorTooManyRequests" msgid="8578277541472944529">"正在处理的请求太多。请稍后重试。"</string>
+    <string name="ErrorTooManyRequests" msgid="8578277541472944529">"由于正在处理的请求太多，请待会儿再试哦~"</string>
     <string name="status_pending" msgid="2503691772030877944">"尚未开始传输文件。"</string>
     <string name="status_running" msgid="6562808920311008696">"正在传输文件。"</string>
     <string name="status_success" msgid="239573225847565868">"已成功完成文件传输。"</string>
@@ -95,8 +95,8 @@
     <string name="status_forbidden" msgid="613956401054050725">"目标设备禁止进行传输。"</string>
     <string name="status_canceled" msgid="6664490318773098285">"用户取消了传输。"</string>
     <string name="status_file_error" msgid="3671917770630165299">"存储问题。"</string>
-    <string name="status_no_sd_card" product="nosdcard" msgid="1112125377088421469">"没有USB存储设备。"</string>
-    <string name="status_no_sd_card" product="default" msgid="5760944071743325592">"无SD卡。请插入SD卡保存传输的文件。"</string>
+    <string name="status_no_sd_card" product="nosdcard" msgid="1112125377088421469">"你没有接入任何USB存储设备。"</string>
+    <string name="status_no_sd_card" product="default" msgid="5760944071743325592">"没有SD卡，请插入SD卡保存传输的文件。"</string>
     <string name="status_connection_error" msgid="947681831523219891">"连接失败。"</string>
     <string name="status_protocol_error" msgid="3245444473429269539">"无法正确处理请求。"</string>
     <string name="status_unknown_error" msgid="8156660554237824912">"未知错误。"</string>
@@ -124,7 +124,7 @@
     <string name="transfer_clear_dlg_title" msgid="2953444575556460386">"清除"</string>
     <string name="bluetooth_map_settings_save" msgid="7635491847388074606">"保存"</string>
     <string name="bluetooth_map_settings_cancel" msgid="9205350798049865699">"取消"</string>
-    <string name="bluetooth_map_settings_intro" msgid="6482369468223987562">"选择您要通过蓝牙共享的帐号。连接时，您仍必须接受所有帐号访问请求。"</string>
+    <string name="bluetooth_map_settings_intro" msgid="6482369468223987562">"选择你要通过蓝牙共享的帐号。连接时，你仍必须接受所有帐号访问请求。"</string>
     <string name="bluetooth_map_settings_count" msgid="4557473074937024833">"剩余空档数："</string>
     <string name="bluetooth_map_settings_app_icon" msgid="7105805610929114707">"应用图标"</string>
     <string name="bluetooth_map_settings_title" msgid="7420332483392851321">"蓝牙消息共享设置"</string>
@@ -132,5 +132,5 @@
     <string name="bluetooth_connected" msgid="6718623220072656906">"蓝牙音频已连接"</string>
     <string name="bluetooth_disconnected" msgid="3318303728981478873">"蓝牙音频已断开连接"</string>
     <string name="a2dp_sink_mbs_label" msgid="7566075853395412558">"蓝牙音频"</string>
-    <string name="bluetooth_opp_file_limit_exceeded" msgid="8894450394309084519">"无法传输 4GB 以上的文件"</string>
+    <string name="bluetooth_opp_file_limit_exceeded" msgid="8894450394309084519">"嘿！目前还无法传输 4GB 以上的文件哦~"</string>
 </resources>
